rubocop/examples/good/style_EmptyLinesAroundBlockBody.rb
# This cops checks if empty lines around
#   the bodies of blocks match the configuration.

# good
something do
  ...
end
