rubocop/examples/bad/style_EmptyLinesAroundBlockBody.rb
# This cops checks if empty lines around
#   the bodies of blocks match the configuration.

# bad
something do

  ...
end
